# StageMicMonitor

./: .gitignore  CMakeLists.txt  README.md
Backend/Source/: Main.cpp
